--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta http-equiv="pragma" content="no-cache" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-    <title>BrickMaster</title>
+    <title>BrickMaster - Accelerating Decarbonisation</title>
 
     <style>
         body {
